{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 376,
  "lineage": "9f3bc5fb-3ea0-9c0b-3bf7-de2d1f2f30ca",
  "resources": [
    {
      "module": "module.security-group[\"ec2_linux\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591642074504:security-group/sg-02cd6004f2f6bd3be",
            "description": "EDR Demo SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02cd6004f2f6bd3be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow replication Traffic",
                "from_port": 1500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1500
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.26.0.0/24"
                ],
                "description": "Allow Any internal Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ec2_linux",
            "name_prefix": "",
            "owner_id": "591642074504",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_linux"
            },
            "tags_all": {
              "Name": "ec2_linux",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-destination",
              "temporary": "yes",
              "terraform": "yes"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0b91ff13acad70690"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-group[\"ec2_linux\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3521800404",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02cd6004f2f6bd3be",
            "security_group_rule_id": "sgr-0aca74c8178fc606e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-group[\"ec2_linux\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH Ingress",
            "from_port": 22,
            "id": "sgrule-1947012583",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02cd6004f2f6bd3be",
            "security_group_rule_id": "sgr-06dccc21770e12bc4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow http Traffic",
            "from_port": 80,
            "id": "sgrule-3263647826",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02cd6004f2f6bd3be",
            "security_group_rule_id": "sgr-02e25cb956626d07c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.26.0.0/24"
            ],
            "description": "Allow Any internal Traffic",
            "from_port": 0,
            "id": "sgrule-4179273214",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02cd6004f2f6bd3be",
            "security_group_rule_id": "sgr-0d9589ab9df640bbc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow replication Traffic",
            "from_port": 1500,
            "id": "sgrule-2338398786",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02cd6004f2f6bd3be",
            "security_group_rule_id": "sgr-00ac17b262f666098",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 1500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ICMP",
            "from_port": -1,
            "id": "sgrule-2733224515",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-02cd6004f2f6bd3be",
            "security_group_rule_id": "sgr-094127d3601191455",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-group[\"ec2_windows\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591642074504:security-group/sg-0f151f06b5ccb9133",
            "description": "EDR Demo SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f151f06b5ccb9133",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.31.0.0/24"
                ],
                "description": "Allow Any from ohio Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "172.26.0.0/24"
                ],
                "description": "Allow Any internal Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "216.73.178.66/32"
                ],
                "description": "Allow http Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "216.73.178.66/32"
                ],
                "description": "RDP",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "ec2_windows",
            "name_prefix": "",
            "owner_id": "591642074504",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_windows"
            },
            "tags_all": {
              "Name": "ec2_windows",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-destination",
              "temporary": "yes",
              "terraform": "yes"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0b91ff13acad70690"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-group[\"ec2_windows\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2760350846",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f151f06b5ccb9133",
            "security_group_rule_id": "sgr-06dcaff4d49647fdd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-group[\"ec2_windows\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "216.73.178.66/32"
            ],
            "description": "RDP",
            "from_port": 3389,
            "id": "sgrule-1485538067",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f151f06b5ccb9133",
            "security_group_rule_id": "sgr-02ddc20d17caf8e91",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "216.73.178.66/32"
            ],
            "description": "Allow http Traffic",
            "from_port": 80,
            "id": "sgrule-803255658",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f151f06b5ccb9133",
            "security_group_rule_id": "sgr-0df79f1fa54deac37",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.26.0.0/24"
            ],
            "description": "Allow Any internal Traffic",
            "from_port": 0,
            "id": "sgrule-3637409529",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f151f06b5ccb9133",
            "security_group_rule_id": "sgr-0e42f1baa1174ee53",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ICMP",
            "from_port": -1,
            "id": "sgrule-903173084",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0f151f06b5ccb9133",
            "security_group_rule_id": "sgr-061719cdc8b10f6bf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.31.0.0/24"
            ],
            "description": "Allow Any from ohio Traffic",
            "from_port": 0,
            "id": "sgrule-2811766036",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f151f06b5ccb9133",
            "security_group_rule_id": "sgr-02c86c00fe0786925",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591642074504:network-acl/acl-0b82fd0b3bcbd4f64",
            "default_network_acl_id": "acl-0b82fd0b3bcbd4f64",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b82fd0b3bcbd4f64",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "591642074504",
            "subnet_ids": [
              "subnet-03e51b3e27a4bfe27",
              "subnet-040919fd84d2d4fe4",
              "subnet-0b909524b4de8ff08",
              "subnet-0f8241556dec0e555"
            ],
            "tags": {
              "Name": "demo-dr-vpc-default"
            },
            "tags_all": {
              "Name": "demo-dr-vpc-default",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-destination",
              "temporary": "yes",
              "terraform": "yes"
            },
            "vpc_id": "vpc-0b91ff13acad70690"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591642074504:route-table/rtb-0a9ed8a70d68ff6cd",
            "default_route_table_id": "rtb-0a9ed8a70d68ff6cd",
            "id": "rtb-0a9ed8a70d68ff6cd",
            "owner_id": "591642074504",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "172.25.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-06247452f3cc318b0"
              }
            ],
            "tags": {
              "Name": "demo-dr-vpc-default"
            },
            "tags_all": {
              "Name": "demo-dr-vpc-default",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-destination",
              "temporary": "yes",
              "terraform": "yes"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b91ff13acad70690"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591642074504:security-group/sg-0ae76642694bb6581",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ae76642694bb6581",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "591642074504",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-dr-vpc-default"
            },
            "tags_all": {
              "Name": "demo-dr-vpc-default",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-destination",
              "temporary": "yes",
              "terraform": "yes"
            },
            "vpc_id": "vpc-0b91ff13acad70690"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c83aca2b5569b893",
            "association_id": "eipassoc-0c9bef3d50bb40451",
            "domain": "vpc",
            "id": "eipalloc-0c83aca2b5569b893",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06eaedc9a21f351e2",
            "private_dns": "ip-172-26-0-46.ec2.internal",
            "private_ip": "172.26.0.46",
            "public_dns": "ec2-44-218-184-133.compute-1.amazonaws.com",
            "public_ip": "44.218.184.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-dr-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "demo-dr-vpc-us-east-1a",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-destination",
              "temporary": "yes",
              "terraform": "yes"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05153fb1c5877c78e",
            "association_id": "eipassoc-02ff3a0e5aebfcb35",
            "domain": "vpc",
            "id": "eipalloc-05153fb1c5877c78e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03fbf66309d1ebfb7",
            "private_dns": "ip-172-26-0-82.ec2.internal",
            "private_ip": "172.26.0.82",
            "public_dns": "ec2-44-218-220-186.compute-1.amazonaws.com",
            "public_ip": "44.218.220.186",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-dr-vpc-us-east-1b"
            },
            "tags_all": {
              "Name": "demo-dr-vpc-us-east-1b",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-destination",
              "temporary": "yes",
              "terraform": "yes"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591642074504:internet-gateway/igw-02f9a99532b50ccf9",
            "id": "igw-02f9a99532b50ccf9",
            "owner_id": "591642074504",
            "tags": {
              "Name": "demo-dr-vpc"
            },
            "tags_all": {
              "Name": "demo-dr-vpc",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-destination",
              "temporary": "yes",
              "terraform": "yes"
            },
            "vpc_id": "vpc-0b91ff13acad70690"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c83aca2b5569b893",
            "association_id": "eipassoc-0c9bef3d50bb40451",
            "connectivity_type": "public",
            "id": "nat-089da7e354ba6e7ad",
            "network_interface_id": "eni-06eaedc9a21f351e2",
            "private_ip": "172.26.0.46",
            "public_ip": "44.218.184.133",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-040919fd84d2d4fe4",
            "tags": {
              "Name": "demo-dr-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "demo-dr-vpc-us-east-1a",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-destination",
              "temporary": "yes",
              "terraform": "yes"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05153fb1c5877c78e",
            "association_id": "eipassoc-02ff3a0e5aebfcb35",
            "connectivity_type": "public",
            "id": "nat-0f4eafde8e5b6ca2d",
            "network_interface_id": "eni-03fbf66309d1ebfb7",
            "private_ip": "172.26.0.82",
            "public_ip": "44.218.220.186",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b909524b4de8ff08",
            "tags": {
              "Name": "demo-dr-vpc-us-east-1b"
            },
            "tags_all": {
              "Name": "demo-dr-vpc-us-east-1b",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-destination",
              "temporary": "yes",
              "terraform": "yes"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d8a5a4480d63293c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-089da7e354ba6e7ad",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d8a5a4480d63293c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07327e4aa6f41d1451080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f4eafde8e5b6ca2d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07327e4aa6f41d145",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02f9a99532b50ccf9",
            "id": "r-rtb-077e636152d27eed81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-077e636152d27eed8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591642074504:route-table/rtb-0d8a5a4480d63293c",
            "id": "rtb-0d8a5a4480d63293c",
            "owner_id": "591642074504",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-089da7e354ba6e7ad",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.25.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-06247452f3cc318b0"
              }
            ],
            "tags": {
              "Name": "demo-dr-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "demo-dr-vpc-private-us-east-1a",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-destination",
              "temporary": "yes",
              "terraform": "yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b91ff13acad70690"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591642074504:route-table/rtb-07327e4aa6f41d145",
            "id": "rtb-07327e4aa6f41d145",
            "owner_id": "591642074504",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f4eafde8e5b6ca2d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.25.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-06247452f3cc318b0"
              }
            ],
            "tags": {
              "Name": "demo-dr-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "demo-dr-vpc-private-us-east-1b",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-destination",
              "temporary": "yes",
              "terraform": "yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b91ff13acad70690"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591642074504:route-table/rtb-077e636152d27eed8",
            "id": "rtb-077e636152d27eed8",
            "owner_id": "591642074504",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f9a99532b50ccf9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.25.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-06247452f3cc318b0"
              }
            ],
            "tags": {
              "Name": "demo-dr-vpc-public"
            },
            "tags_all": {
              "Name": "demo-dr-vpc-public",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-destination",
              "temporary": "yes",
              "terraform": "yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b91ff13acad70690"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051ad89d73037aa5b",
            "route_table_id": "rtb-0d8a5a4480d63293c",
            "subnet_id": "subnet-03e51b3e27a4bfe27"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ffca10308f87f12",
            "route_table_id": "rtb-07327e4aa6f41d145",
            "subnet_id": "subnet-0f8241556dec0e555"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0745e7fb9fcf9c8f0",
            "route_table_id": "rtb-077e636152d27eed8",
            "subnet_id": "subnet-040919fd84d2d4fe4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081505fea3bef0410",
            "route_table_id": "rtb-077e636152d27eed8",
            "subnet_id": "subnet-0b909524b4de8ff08"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591642074504:subnet/subnet-03e51b3e27a4bfe27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.26.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e51b3e27a4bfe27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "591642074504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-priv-staging"
            },
            "tags_all": {
              "Name": "demo-priv-staging",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-destination",
              "temporary": "yes",
              "terraform": "yes"
            },
            "vpc_id": "vpc-0b91ff13acad70690"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591642074504:subnet/subnet-0f8241556dec0e555",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.26.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8241556dec0e555",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "591642074504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-priv-recovery"
            },
            "tags_all": {
              "Name": "demo-priv-recovery",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-destination",
              "temporary": "yes",
              "terraform": "yes"
            },
            "vpc_id": "vpc-0b91ff13acad70690"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591642074504:subnet/subnet-040919fd84d2d4fe4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.26.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040919fd84d2d4fe4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "591642074504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-pub-staging"
            },
            "tags_all": {
              "Name": "demo-pub-staging",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-destination",
              "temporary": "yes",
              "terraform": "yes"
            },
            "vpc_id": "vpc-0b91ff13acad70690"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591642074504:subnet/subnet-0b909524b4de8ff08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.26.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b909524b4de8ff08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "591642074504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-pub-recovery"
            },
            "tags_all": {
              "Name": "demo-pub-recovery",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-destination",
              "temporary": "yes",
              "terraform": "yes"
            },
            "vpc_id": "vpc-0b91ff13acad70690"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591642074504:vpc/vpc-0b91ff13acad70690",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.26.0.0/24",
            "default_network_acl_id": "acl-0b82fd0b3bcbd4f64",
            "default_route_table_id": "rtb-0a9ed8a70d68ff6cd",
            "default_security_group_id": "sg-0ae76642694bb6581",
            "dhcp_options_id": "dopt-5dfcae27",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b91ff13acad70690",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a9ed8a70d68ff6cd",
            "owner_id": "591642074504",
            "tags": {
              "Name": "demo-dr-vpc"
            },
            "tags_all": {
              "Name": "demo-dr-vpc",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-destination",
              "temporary": "yes",
              "terraform": "yes"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}